# WayOSK

./: README.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md
WayOSK/: Indicator.qml  Keyboard.qml  KeyboardKey.qml  config_handler.py  keyboard_server.py  main.py  main.qml
WayOSK/KeyboardUtils/: KeyboardKey.qml  qmldir
WayOSK/layouts/: de_de.qml
